Fixed empty space on mobile

--- a/app/templates/files/src/web/components/app-header/app-header.less
+++ b/app/templates/files/src/web/components/app-header/app-header.less
@@ -13,10 +13,6 @@ app-header {
     height: auto;
   }
 
-  .navigation {
-    display: inline-block;
-  }
-
   .language-switcher {
     display: inline-block;
     max-width: 30%;
@@ -34,6 +30,7 @@ app-header {
     }
 
     .navigation {
+      display: inline-block;
       width: 70%;
       padding-top: @navbar-padding-vertical;
       padding-bottom: @navbar-padding-vertical;
